--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
 
 	<head>
 
-		<meta charset="utf-8">
+		<meta charset="utf-8" name="viewport" content="width=device-width,initial-scale=1">
+
 		<title>Barbershop new</title>
 		<link href="css/normalize.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
@@ -13,10 +14,10 @@
 	<body>
 		<header class="page-header">
 			<a class="page-header__logo">
-				<img class="page-header__logo-image" src="img/logotype-mobile.svg" width="226" height="30" alt="Барбершоп">
+				<img class="page-header__logo-image" src="img/logotype-mobile.png" width="226" height="30" alt="Барбершоп">
 			</a>
-			<nav class="main-nav">
-				<button type="main-nav__toggle" type="button">Открыть меню</button>
+			<nav class="main-nav main-nav--closed main-nav--nojs">
+				<button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
 				<div class="main-nav__wrapper">
 					<ul class="main-nav__list site-list">
 						<li class="site-list__item site-list__item--active">
@@ -32,12 +33,15 @@
 							<a href="#">Контакты</a>
 						</li>
 						<li class="site-list__item">
-							<a href="evg.by">Разработчик</a>
+							<a href="evg.by">Разраб</a>
 						</li>
 					</ul>
 					<ul class="main-nav__list user-list">
 						<li class="user-list__item">
-							<a class="user-list__login" href="login.html">Войти</a>
+							<a class="user-list__login" href="login.html">
+		            <svg class="user-list__login-icon" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><polygon points="0 7 7.01 7 7.01 4.06 10.96 8.01 7.01 11.91 7.01 9.06 0 9.02 0 7"/><polygon points="7.01 0 7.01 2 14.03 2 14.03 13.99 7.01 13.99 7.01 16 16 16 16 0 7.01 0"/></svg>
+		            Войти
+		          </a>
 						</li>
 					</ul>
 				</div>
@@ -219,6 +223,22 @@
       </div>
     </footer>
 
+		<script>
+		  var navMain = document.querySelector('.main-nav');
+		  var navToggle = document.querySelector('.main-nav__toggle');
+
+		  navMain.classList.remove('main-nav--nojs');
+
+		  navToggle.addEventListener('click', function() {
+		    if (navMain.classList.contains('main-nav--closed')) {
+		      navMain.classList.remove('main-nav--closed');
+		      navMain.classList.add('main-nav--opened');
+		    } else {
+		      navMain.classList.add('main-nav--closed');
+		      navMain.classList.remove('main-nav--opened');
+		    }
+		  });
+		</script>
 	</body>
 
 </html>
