--- a/source/Index.html
+++ b/source/Index.html
@@ -20,7 +20,7 @@
 </svg>
 
 
-		<header class="page-header">
+		<!-- <header class="page-header">
 			<a class="page-header__logo">
 				<picture>
 		      <source media="(min-width: 1200px)" srcset="img/logotype-desktop.svg">
@@ -137,7 +137,7 @@
             <button class="slider__toggle slider__toggle--price" type="button">3</button>
           </p>
         </div>
-      </section>
+      </section> -->
 
 			<section class="news">
         <div class="news__wrapper">
@@ -171,32 +171,34 @@
 
 			<section class="reviews">
         <div class="reviews__wrapper slider">
-          <h2 class="reviews__title">Отзывы о нас</h2>
-          <a class="reviews__write button" href="#">Оставить свой</a>
+					  <div class="reviews__title-wrapper">
+		          <h2 class="reviews__title">Отзывы о нас</h2>
+		          <a class="reviews__write button" href="#">Оставить свой</a>
+						</div>
           <div class="reviews__list  slider__list">
+						<button class="reviews__prev button" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
             <blockquote class="reviews__item  slider__item">
               <p class="reviews__author-picture">
-                <img class="reviews__author-image" src="img/picture-travis.jpg" width="50" height="33" alt="Фото Трэвиса Баркера">
+                <img class="reviews__author-image" src="img/picture-travis.jpg" width="50" height="50" alt="Фото Трэвиса Баркера">
               </p>
               <cite class="reviews__author-name">Трэвис Баркер</cite>
               <p class="reviews__text">Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
             </blockquote>
-            <blockquote class="reviews__item  slider__item">
+            <blockquote class="reviews__item  slider__item visually-hidden">
               <p class="reviews__author-picture">
                 <img class="reviews__author-image" src="img/picture-john.jpg" width="50" height="33" alt="Фото Джона Смита">
               </p>
               <cite class="reviews__author-name">Джон Смит</cite>
               <p class="reviews__text">Отличную стрижку мне сделали ребята.</p>
             </blockquote>
-            <blockquote class="reviews__item  slider__item">
+            <blockquote class="reviews__item  slider__item visually-hidden">
               <p class="reviews__author-picture">
                 <img class="reviews__author-image" src="img/picture-ivan.jpg" width="50" height="33" alt="Фото Ивана Бородайло">
               </p>
               <cite class="reviews__author-name">Иван Бородайло</cite>
               <p class="reviews__text">В Бородинском ваша борода в надёжных руках!</p>
             </blockquote>
-            <button class="reviews__prev" type="button">Предыдущий отзыв</button>
-            <button class="reviews__next" type="button">Следующий отзыв</button>
+            <button class="reviews__next button" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
           </div>
           <p class="reviews__toggles slider__toggles">
             <button class="slider__toggle" type="button">1</button>
